# medical-mcp

./: .gitignore  dockerfile
mcp-client/: client.py  pyproject.toml  requirements.txt
mcps/: README.md  bioarxiv_mcp.py  clinicaltrialsgov_mcp.py  drugbank_mcp.py  opentargets_mcp.py  pubmed_mcp.py  requirements.txt
